--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Masaakiii - フロントエンドエンジニア志望</h1>
-    <img src="KiKisama.png" alt="プロフィール画像" class="profile-image" />
-    <p>私は日本で生まれ、台湾で育ちました。日台両方の文化や価値観を理解しており、異なる背景を持つ人々と円滑にコミュニケーションを取ることができます。</p>
-    <p>自主的に学び、アウトプットを通じての成長を大切にしています。<br>
-    失敗経験からも、問題解決や継続的な成長に繋げてきました。<br>
-    会社と共に成長し、価値を提供できるエンジニアを目指します。</p>
+  <header class="intro-section">
+    <div class="intro-container">
+      <div class="intro-image">
+        <img src="KiKisama.png" alt="プロフィール画像" />
+      </div>
+      <div class="intro-text">
+        <h1>フロントエンドエンジニア志望</h1>
+        <p>私は日本で生まれ、台湾で育ちました。日台両方の文化や価値観を理解しており、異なる背景を持つ人々と円滑にコミュニケーションを取ることができます。</p>
+        <p>自主的に学び、アウトプットを通じての成長を大切にしています。<br>
+        失敗経験からも、問題解決や継続的な成長に繋げてきました。<br>
+        会社と共に成長し、価値を提供できるエンジニアを目指します。</p>
+      </div>
+    </div>
   </header>
 
   <main>
