--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="intro-section">
-    <div class="intro-container">
-      <div class="intro-image">
-        <img src="KiKisama.png" alt="プロフィール画像" />
-      </div>
-      <div class="intro-text">
-        <h1>フロントエンドエンジニア志望</h1>
-        <p>私は日本で生まれ、台湾で育ちました。両方の文化や価値観を理解しており、異なる背景を持つ人々と円滑にコミュニケーションを取ることができます。</p>
-        <p>自主的に学び、アウトプットを通じての成長を大切にしています。<br>
-        失敗経験からも、問題解決や継続的な成長に繋げてきました。<br>
-        会社と共に成長し、価値を提供できるエンジニアを目指します。</p>
-      </div>
-    </div>
-  </header>
 
   <main>
     <div class="row">
       <section class="card">
         <h2>自己紹介</h2>
+        <p>
+          私は日本で生まれ、台湾で育ちました。両方の文化や価値観を理解しており、異なる背景を持つ人々と円滑にコミュニケーションを取ることができます。
+        </p>
+        <p>
+          自主的に学び、アウトプットを通じての成長を大切にしています。<br />
+          失敗経験からも、問題解決や継続的な成長に繋げてきました。<br />
+          会社と共に成長し、価値を提供できるエンジニアを目指します。
+        </p>
         <p>
           現在、独学で HTML・CSS・JavaScript を学習中です。<br />
           将来はフロントエンドエンジニアとして、Webサービスの開発に携わりたいと考えています。<br />
@@ -70,7 +64,12 @@
   </main>
 
   <footer>
-    &copy; 2025 Masaakiii. All rights reserved.
+    <p>&copy; 2025 Masaakiii. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/Masaakiii" target="_blank">GitHub</a> |
+      <a href="https://www.linkedin.com/in/35887b364/" target="_blank">LinkedIn</a>
+    </p>
   </footer>
+
 </body>
 </html>
